--- a/css/fact.css
+++ b/css/fact.css
@@ -73,10 +73,6 @@
   /* background-position: 5%; */
 }
 
-.fact-one-section .image-col {
-  background-color: #666;
-}
-
 .fact-one-section .text-content {
   text-align: center;
   max-width: 80%;
@@ -240,4 +236,100 @@
 
 .logo-section .btn:hover {
   background-color: #022542;
+}
+
+/* Carousel Popup */
+.carousel-popup {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.carousel-content {
+  position: relative;
+  margin: auto;
+  padding: 5%;
+  width: 80%;
+  max-width: 1000px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.carousel {
+  position: relative;
+}
+
+.carousel-inner {
+  display: flex;
+  flex-direction: row;
+}
+
+.carousel-item {
+  display: none;
+  width: 100%;
+}
+
+.carousel-item img {
+  width: 100%;
+}
+
+.carousel-item.active {
+  display: block;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 24px;
+  transition: 0.6s ease;
+  border-radius: 50%;
+  user-select: none;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.carousel-indicators {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.indicator-img {
+  cursor: pointer;
+  width: 60px;
+  height: auto;
+  margin: 5px;
+  opacity: 0.6;
+}
+
+.indicator-img:hover,
+.indicator-img.active {
+  opacity: 1;
 }
