--- a/css/home.css
+++ b/css/home.css
@@ -385,6 +385,7 @@
   .logo-section img {
     width: 100%;
     height: auto;
+    margin-bottom: 20px;
   }
 
   .logo-section .btn {
@@ -429,7 +430,8 @@
 
   .main-content {
     background-image: url("../images/home-mobile-bg.jpg");
-    background-size: cover;
+    background-size: 100% 100%;
+    height: 100vh;
   }
 
   .explore-section .explore-title {
@@ -459,11 +461,73 @@
   }
 
   .timeline-section {
-    /* background-color: #24292d; */
-    background-image: url("../images/new-timeline-bg.jpg");
+    background-image: url("../images/timeline-mobile-bg-new.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     min-height: 100vh;
     padding: 0px 15px;
+  }
+
+  .explore-section .container {
+    padding: 0 30px;
+  }
+
+  .explore-section .explore-description {
+    font-family: "Piazzolla", serif;
+    font-weight: 600;
+  }
+
+  .explore-section .sub-row {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  .explore-section .explore-subtitle-value {
+    padding-bottom: 5px;
+    width: 100%;
+  }
+
+  .sub-row .col {
+    width: 100%;
+    height: 100%;
+  }
+
+  .sub-row .col .explore-subtitle {
+    font-size: 20px;
+    font-weight: 400;
+    width: 100%;
+    height: 100%;
+  }
+
+  .logo-section .star-icon {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+  }
+
+  .col-right {
+    width: 100%;
+  }
+
+  .culture-section .section-title,
+  .logo-section .section-title {
+    font-size: 32px;
+    text-align: start;
+  }
+
+  .culture-section .section-description,
+  .logo-section .section-description {
+    width: 100%;
+    font-size: 16px;
+    text-align: start;
+  }
+
+  .logo-section .container {
+    padding: 0 30px;
+  }
+
+  .logo-section {
+    padding: 50px 0;
   }
 }
